--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 	</div>
 	<div class="nav">
 		<button id="exchange">exchange</button>
-		<button id="upload" onclick="document.getElementById('file').click()">upload</button>
+		<!-- <button id="upload" onclick="document.getElementById('file').click()">upload</button> -->
 		<input id="file" type='file'>
 		<button id="bezierCurveTo">bezierCurveTo</button>
+		<button id="next">next</button>
 	</div>
 	<div id="preview">
 		<img id="imghead" src=''>
