--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
 		<span>lineWidth:</span><input type="number" id="lineWidth" value="2"  min="0" max="10"/>
 	</div>
 	<div class="nav">
+		<span>isLink:</span><input id="link" type="checkbox" name="" />
+	</div>
+	<div class="nav">
 		<button id="exchange">exchange</button>
-		<!-- <button id="upload" onclick="document.getElementById('file').click()">upload</button> -->
+		<button id="upload" onclick="document.getElementById('file').click()">upload</button>
 		<input id="file" type='file'>
 		<button id="bezierCurveTo">bezierCurveTo</button>
 		<button id="next">next</button>
